--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
   - "0.10"
+before_install:
+  - "sudo apt-get install xinput"
 notifications:
   email:
     on_success: "never"
