--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ node_js:
   - "0.10"
 before_install:
   - "sudo apt-get install xinput"
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - "sleep 2"
 notifications:
   email:
     on_success: "never"
